# NeuroShark

./: README.md
Backend/: Cargo.toml  rust-toolchain.toml
Backend-original/main-contract/src/: contract.rs
Backend-original/main-contract/tests/: main_contract_test.rs
Backend/and-gate-neuronal-network/src/: contract.rs
Backend/and-gate-neuronal-network/tests/: init_neuronal_network.rs  predictions_calls_neuronal_network.rs
Backend/doodles-prediction-neuronal-network/: Cargo.toml  build.rs
Backend/doodles-prediction-neuronal-network/io/: Cargo.toml
Backend/doodles-prediction-neuronal-network/io/src/: fraction.rs  lib.rs  matrix.rs  network.rs  utils.rs
Backend/doodles-prediction-neuronal-network/src/: contract.rs
Backend/main-contract/src/: contract.rs
Backend/oracle-server/: Cargo.toml
Backend/oracle-server/src/: main.rs
Backend/ping-pong/: Cargo.toml  build.rs
Backend/ping-pong/io/: Cargo.toml
Backend/ping-pong/io/src/: lib.rs
Backend/ping-pong/src/: contract.rs
Backend/ping-pong/state/: Cargo.toml
Backend/ping-pong/state/src/: lib.rs
Backend/xor-gate-neuronal-network/: Cargo.toml  build.rs
Backend/xor-gate-neuronal-network/io/: Cargo.toml
Backend/xor-gate-neuronal-network/io/src/: fraction.rs  lib.rs  matrix.rs  network.rs
Backend/xor-gate-neuronal-network/src/: contract.rs
Backend/xor-gate-neuronal-network/tests/: predictions_calls_neuronal_network.rs  subscriptions_actions.rs
Frontend/: tailwind.config.ts
Frontend-old/src/: consts.ts
Frontend-old/src/Icons/: Build.tsx  Diagram.tsx  WalletIcon.tsx  index.ts
(+30 files in other folders)
