[package]
name = "ping-pong"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
ping-pong-io.workspace = true

[dev-dependencies]
gclient.workspace = true
gtest.workspace = true
tokio.workspace = true

[build-dependencies]
ping-pong-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true